--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,16 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 # -------Plugins---------
 jgitver=0.10.0-rc03
-dependencyManagement=1.1.7
-springframeworkBoot=3.4.1
+dependencyManagement=1.1.5
+springframeworkBoot=3.4.0
 johnrengelmanShadow=8.1.1
-jib=3.4.4
-protobufVer=0.9.4
-sonarlint=4.3.3
+jib=3.4.1
+protobufVer=0.8.18
 spotless=6.25.0
 # -------Versions--------
-testcontainersBom=1.20.4
-protobufBom=4.29.2
-guava=33.4.0-jre
+testcontainersBom=1.19.7
+protobufBom=3.24.4
+guava=33.1.0-jre
+jmh=1.37
+asm=9.7
+glassfishJson=2.0.1
