--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ springframeworkBoot=3.4.0
 johnrengelmanShadow=8.1.1
 jib=3.4.1
 protobufVer=0.8.18
+sonarlint=4.2.4
 spotless=6.25.0
 # -------Versions--------
 testcontainersBom=1.19.7
